RESOLVED FIXED 289486
REGRESSION(288484@main): ApplePaySetup.getSetupFeatures() fails because PKPaymentSetupFeature is dropped on the floor during IPC serialization
https://bugs.webkit.org/show_bug.cgi?id=289486
Summary REGRESSION(288484@main): ApplePaySetup.getSetupFeatures() fails because PKPay...
Abrar Rahman Protyasha
Reported 2025-03-10 14:06:15 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-03-10 14:26:20 PDT
EWS
Comment 2 2025-03-10 19:50:16 PDT
Committed 291932@main (b9e0ba818f83): <https://commits.webkit.org/291932@main> Reviewed commits have been landed. Closing PR #42208 and removing active labels.
EWS
Comment 3 2025-03-11 21:20:07 PDT
Committed 289651.263@safari-7621-branch (f2a0dba08e88): <https://commits.webkit.org/289651.263@safari-7621-branch> Reviewed commits have been landed. Closing PR #2784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.