REGRESSION(288484@main): ApplePaySetup.getSetupFeatures() fails because PKPaymentSetupFeature is dropped on the floor during IPC serialization https://bugs.webkit.org/show_bug.cgi?id=289486 rdar://145064904

Reviewed by Alex Christensen.

Currently, any web-exposed API that passes around ApplePaySetupFeature
(which corresponds to PKPaymentSetupFeature in Cocoa platforms) fails.
This is because after 288484@main, PKPaymentSetupFeature is no longer
decoded through decoding flows pertaining to NSSecureCoding. Moreoever,
our inability to provide a CoreIPC wrapper for the type meant that we
were silently dropping PKPaymentSetupFeature during IPC serialization,
and as such always incorrectly fulfilling the necessary IPC calls
downstream of ApplePaySetup usage.

This commit addresses the bug as such:
1. Provide a CoreIPCPKPaymentSetupFeature wrapper class to continue
   using NSKU.
2. Undo 291313@main. This commit was introduced under the working
   assumption that the WebPaymentCoordinatorProxy resides entirely in
   the networking process on iOS. It turns out that is not true, and is
   indicative of broader architectural issues (since we specifically
   want the coordinator proxy to _not_ live in the UI process on iOS).
   We should fix this separately, tracked in webkit.org/b/289488.

* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.h:
* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::getClass<PKPaymentSetupFeature>):
(IPC::typeFromObject):
* Source/WebKit/Shared/Cocoa/CoreIPCNSCFObject.h:
* Source/WebKit/Shared/Cocoa/CoreIPCNSCFObject.mm:
(WebKit::valueFromID):
* Source/WebKit/Shared/Cocoa/CoreIPCNSCFObject.serialization.in:
* Source/WebKit/Shared/Cocoa/CoreIPCPKPaymentSetupFeature.h: Copied from Source/WebKit/Shared/Cocoa/CoreIPCPKSecureElementPass.mm.
(WebKit::CoreIPCPKPaymentSetupFeature::CoreIPCPKPaymentSetupFeature):
(WebKit::CoreIPCPKPaymentSetupFeature::ipcData const):
* Source/WebKit/Shared/Cocoa/CoreIPCPKPaymentSetupFeature.mm: Copied from Source/WebKit/Shared/Cocoa/CoreIPCPKSecureElementPass.mm.
(WebKit::CoreIPCPKPaymentSetupFeature::CoreIPCPKPaymentSetupFeature):
(WebKit::CoreIPCPKPaymentSetupFeature::toID const):
* Source/WebKit/Shared/Cocoa/CoreIPCPKSecureElementPass.mm:
* Source/WebKit/Shared/Cocoa/CoreIPCPassKit.serialization.in:
* Source/WebKit/Shared/Cocoa/CoreIPCTypes.h:
* Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didAttachToRunningProcess):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/291932@main